--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <p class="desc">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
       </div>
-      <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.</div>
+      <div class="attribution">Challenge by<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>. Coded by <a href="https://github.com/kurokurome"> AL</a>.</div>
     </div>
   </body>
 </html>
